force-app/main/default/objects/Invoice__c/fields/Bulk_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Invoice</label>
    <type>Checkbox</type>
</CustomField>