force-app/main/default/objects/Invoice__c/fields/Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount__c</fullName>
    <formula>IF( Invoice_Amount__c &gt; 300, Invoice_Amount__c-(20/100*Invoice_Amount__c), Invoice_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>