force-app/main/default/objects/Invoice__c/fields/Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id__c</fullName>
    <label>Invoice Id</label>
    <type>AutoNumber</type>
</CustomField>