force-app/main/default/objects/Invoice__c/fields/invoice_reg__c.field-meta.xml
<CustomField>
    <fullName>invoice_reg__c</fullName>
    <label>invoice reg#</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>