force-app/main/default/objects/Invoice__c/fields/Week_end_discount__c.field-meta.xml
<CustomField>
    <fullName>Week_end_discount__c</fullName>
    <formula>IF( Invoice_Date__c &lt;=  DATE(2019,05,06) ,  Final_Amount__c -(20/100*Invoice_Amount__c), Final_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week end discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>